--- a/.github/workflows/master_customerregisterapp.yml
+++ b/.github/workflows/master_customerregisterapp.yml
@@ -14,8 +14,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
-        run: actions/checkout@v2
+      - uses: actions/checkout@v2
 
       - name: Set up Java version
         uses: actions/setup-java@v1
