--- a/.github/workflows/master_customerregisterapp.yml
+++ b/.github/workflows/master_customerregisterapp.yml
@@ -15,6 +15,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+        with:
+          name: bundle
+          path: ./build/*
 
       - name: Set up Java version
         uses: actions/setup-java@v1
@@ -32,6 +35,7 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
+    needs: build
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
